# gh-dispatch

./: Cargo.toml  LICENSE  PLAN.md  README.md  config.yaml  dist-workspace.toml
.github/workflows/: build.yml  example-build.yml  example-deploy.yml
src/: cli.rs  config.rs  github.rs  main.rs  prompts.rs  ui.rs  watcher.rs
