[package]
name = "gh-dispatch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = {version = "4.5", features = ["derive"]}
indexmap = {version="2.0", features = ["serde"]}
inquire = "0.9"
octocrab = "0.49"
serde = {version="1.0", features = ["derive"]}
serde_yaml = "0.9"
tokio = {version = "1.49", features = ["rt-multi-thread", "macros"]}
