[package]
name = "gh-dispatch"
version = "0.1.1"
edition = "2024"
license = "MIT"
author = "trevorhudson"
repository = "https://github.com/trevorhudson/gh-dispatch"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
colored = "2"
indexmap = { version = "2.0", features = ["serde"] }
indicatif = "0.18"
inquire = "0.9"
inquire-derive = "0.9"
octocrab = "0.49"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # for parsing workflow files from GitHub
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
